@@ -11,47 +11,6 @@ module PkgTools
   end
 end
 
-module RubyTools
-  # use provided ruby.exe to figure out runtime information
-  def self.parse_ruby(ruby_exe)
-    result = `#{ruby_exe} -rrbconfig -ve \"puts 'ruby_version: %s' % RbConfig::CONFIG['ruby_version']\"`
-    return nil unless $?.success?
-    return nil if result.empty?
-
-    h = {}
-
-    if result =~ /(\d\.\d.\d)/
-      h[:version] = $1
-    end
-
-    if result =~ /patchlevel (\d+)/
-      h[:patchlevel] = $1
-    end
-
-    if result =~ /\dp(\d+)/
-      h[:patchlevel] = $1
-    end
-
-    if result =~ /ruby_version: (\S+)/
-      h[:lib_version] = $1
-    end
-
-    if result =~ /\[(\S+)\]/
-      h[:platform] = $1
-    end
-
-    if result =~ /trunk (\d+)/
-      h[:revision] = $1
-    end
-
-    if result =~ /(\d+-\d+-\d+)/
-      h[:release_date] = $1
-    end
-
-    h
-  end
-end
-
 # TODO: port this to it's own innosetup recipe
 module InnoSetup
   extend Rake::DSL if defined?(Rake::DSL)
